# ai_detector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
ai_detector/: trainer.py
config/: config.yaml
config/data/: default.yaml
config/mlflow/: default.yaml
data/: .gitignore  subtaskC_train_dev.jsonl.dvc  test_m4gt.pkl.dvc  train_m4gt.pkl.dvc  valid_m4gt.pkl.dvc
mlops_project/mlcore/: .gitignore  data_correct.json.dvc  dataset.py  model.py  testme.py  tests.ipynb  trainer.py  utils.py
