[project]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = [
    {name = "ruanwko",email = "artem.borisov@raiffeisen.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning (>=2.6.0,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
